-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 18
-
Component/s: hotspot
-
b17
-
x86
-
os_x
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8275129 | 17.0.2 | Jie Fu | P4 | Resolved | Fixed | b03 |
| JDK-8277386 | 15.0.6 | Olga Mikhaltcova | P4 | Resolved | Fixed | b03 |
| JDK-8277395 | 13.0.10 | Olga Mikhaltcova | P4 | Resolved | Fixed | b03 |
| JDK-8275665 | 11.0.14-oracle | Harold Seigel | P4 | Resolved | Fixed | b03 |
| JDK-8275455 | 11.0.14 | Christoph Langer | P4 | Resolved | Fixed | b01 |
=== Output from failing command(s) repeated here ===
* For target hotspot_variant-server_libjvm_objs_os_posix.o:
/Users/xiepeng/codes/opensource/bobjdk/src/hotspot/os/posix/os_posix.cpp:1887:26: error: 'vfork' is deprecated: Use posix_spawn or fork [-Werror,-Wdeprecated-declarations]
pid = prefer_vfork ? ::vfork() : ::fork();
^
/Users/xiepeng/dev/Xcode-beta.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.0.sdk/usr/include/unistd.h:604:1: note: 'vfork' has been explicitly marked deprecated here
__deprecated_msg("Use posix_spawn or fork")
^
/Users/xiepeng/dev/Xcode-beta.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX12.0.sdk/usr/include/sys/cdefs.h:208:48: note: expanded from macro '__deprecated_msg'
#define __deprecated_msg(_msg) __attribute__((__deprecated__(_msg)))
^
1 error generated.
- backported by
-
JDK-8275129 Build failure on macOS with Xcode 13.0 as vfork is deprecated
-
- Resolved
-
-
JDK-8275455 Build failure on macOS with Xcode 13.0 as vfork is deprecated
-
- Resolved
-
-
JDK-8275665 Build failure on macOS with Xcode 13.0 as vfork is deprecated
-
- Resolved
-
-
JDK-8277386 Build failure on macOS with Xcode 13.0 as vfork is deprecated
-
- Resolved
-
-
JDK-8277395 Build failure on macOS with Xcode 13.0 as vfork is deprecated
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/bdf1d027
-
Commit
openjdk/jdk13u-dev/e1b54408
-
Commit
openjdk/jdk15u-dev/f76b4e88
-
Commit
openjdk/jdk17u/54a86bb7
-
Commit
openjdk/jdk/252aaa92
-
Review
openjdk/jdk11u-dev/529
-
Review
openjdk/jdk13u-dev/292
-
Review
openjdk/jdk15u-dev/135
-
Review
openjdk/jdk17u/182
-
Review
openjdk/jdk17u/183
-
Review
openjdk/jdk/5686