8274293: Build failure on macOS with Xcode 13.0 as vfork is deprecated

Reviewed-by: alanb, stuefe, rriggs